--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "recipe-book-app",
-  "homepage": "https://github.com/AnastasiiaKuropatkina.github.io/recipe-book-app/",
+  "name": "Recipe-Book-App",
+  "homepage": "https://github.com/AnastasiiaKuropatkina.github.io/Recipe-Book-App/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
